--- a/Lib_Main/src/main/res/values/strings.xml
+++ b/Lib_Main/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="main_app_name">Lib_Main</string>
     <string name="main_splash_text">Welcome to AndroidBaseFrameMVVM!</string>
+    <string name="main_select_function">选择功能</string>
+    <string name="main_function_translation">Translation</string>
 </resources>
